Allow changing the gzip and extent settings through .env file

--- a/.env
+++ b/.env
@@ -44,3 +44,12 @@ COPY_CONCURRENCY=10
 
 # Variables for generate tiles using tilelive-pgquery
 PGHOSTS_LIST=
+
+# Set the extent of the MVT
+# if not set uses the default 4096
+EXTENT=
+
+# compress MVT with gzip, with optional level=0..9
+# setting to TILE_GZIP=OFF disables gzip compression
+# not setting this option uses default --gzip setting of openmaptiles-tools/bin/generate-sqltomvt
+TILE_GZIP=
