--- a/.env
+++ b/.env
@@ -19,12 +19,12 @@ PGPORT=5432
 BBOX=-180.0,-85.0511,180.0,85.0511
 
 # Which zooms to generate with   make generate-tiles-pg
-MIN_ZOOM=0
-MAX_ZOOM=7
+MIN_ZOOM=5
+MAX_ZOOM=18
 
 # `MID_ZOOM` setting only works with `make generate-tiles-pg` command.  Make sure MID_ZOOM < MAX_ZOOM.
 # See https://github.com/openmaptiles/openmaptiles-tools/pull/383
-# MID_ZOOM=11
+# MID_ZOOM=14
 
 # Use  true  (case sensitive) to allow data updates
 DIFF_MODE=false
@@ -47,9 +47,9 @@ PGHOSTS_LIST=
 
 # Set the extent of the MVT
 # if not set uses the default 4096
-EXTENT=
+EXTENT=1024
 
 # compress MVT with gzip, with optional level=0..9
 # setting to TILE_GZIP=OFF disables gzip compression
 # not setting this option uses default --gzip setting of openmaptiles-tools/bin/generate-sqltomvt
-TILE_GZIP=
+TILE_GZIP=OFF
