--- a/layers/landuse/mapping.yaml
+++ b/layers/landuse/mapping.yaml
@@ -36,9 +36,26 @@ generalized_tables:
     tolerance: ZRES12
   # etldoc: osm_landuse_polygon -> osm_landuse_polygon_gen_z13
   landuse_polygon_gen_z13:
-    source: landuse_polygon
-    sql_filter: area>power(ZRES11,2) AND ST_IsValid(geometry)
+    source: landuse_polygon_gen_z14
+    sql_filter: area>power(ZRES11,2)
     tolerance: ZRES13
+
+  landuse_polygon_gen_z14:
+    source: landuse_polygon_gen_z15
+    sql_filter: area>power(ZRES12,2)
+    tolerance: ZRES14
+  landuse_polygon_gen_z15:
+    source: landuse_polygon_gen_z16
+    sql_filter: area>power(ZRES13,2)
+    tolerance: ZRES15
+  landuse_polygon_gen_z16:
+    source: landuse_polygon_gen_z17
+    sql_filter: area>power(ZRES14,2)
+    tolerance: ZRES16
+  landuse_polygon_gen_z17:
+    source: landuse_polygon
+    sql_filter: area>power(ZRES15,2) AND ST_IsValid(geometry)
+    tolerance: ZRES17
 
 tables:
   # etldoc: imposm3 -> osm_landuse_polygon
