--- a/layers/park/mapping.yaml
+++ b/layers/park/mapping.yaml
@@ -55,9 +55,26 @@ generalized_tables:
 
   # etldoc: osm_park_polygon -> osm_park_polygon_gen_z13
   park_polygon_gen_z13:
-    source: park_polygon
-    sql_filter: area>power(ZRES12,2) AND ST_IsValid(geometry)
+    source: park_polygon_gen_z14
+    sql_filter: area>power(ZRES12,2)
     tolerance: ZRES13
+
+  park_polygon_gen_z14:
+    source: park_polygon_gen_z15
+    sql_filter: area>power(ZRES13,2)
+    tolerance: ZRES14
+  park_polygon_gen_z15:
+    source: park_polygon_gen_z16
+    sql_filter: area>power(ZRES14,2)
+    tolerance: ZRES15
+  park_polygon_gen_z16:
+    source: park_polygon_gen_z17
+    sql_filter: area>power(ZRES15,2)
+    tolerance: ZRES16
+  park_polygon_gen_z17:
+    source: park_polygon
+    sql_filter: area>power(ZRES16,2) AND ST_IsValid(geometry)
+    tolerance: ZRES17
 
 tables:
 
