--- a/layers/transportation/mapping.yaml
+++ b/layers/transportation/mapping.yaml
@@ -27,23 +27,19 @@ generalized_tables:
 
   railway_linestring_gen_z13:
     source: railway_linestring_gen_z14
-    sql_filter: railway IN ('rail', 'narrow_gauge', 'light_rail') AND service=''
     tolerance: ZRES13
   railway_linestring_gen_z14:
     source: railway_linestring_gen_z15
-    sql_filter: railway IN ('rail', 'narrow_gauge', 'light_rail') AND service=''
     tolerance: ZRES14
   railway_linestring_gen_z15:
     source: railway_linestring_gen_z16
-    sql_filter: railway IN ('rail', 'narrow_gauge', 'light_rail') AND service=''
     tolerance: ZRES15
   railway_linestring_gen_z16:
     source: railway_linestring_gen_z17
-    sql_filter: railway IN ('rail', 'narrow_gauge', 'light_rail') AND service=''
     tolerance: ZRES16
   railway_linestring_gen_z17:
     source: railway_linestring
-    sql_filter: railway IN ('rail', 'narrow_gauge', 'light_rail') AND service='' AND ST_IsValid(geometry)
+    sql_filter: ST_IsValid(geometry)
     tolerance: ZRES17
 
 
@@ -118,25 +114,20 @@ generalized_tables:
 
 # etldoc: osm_shipway_linestring -> osm_shipway_linestring_gen_z12
   shipway_linestring_gen_z12:
-    source: shipway_linestring
-    sql_filter: ST_IsValid(geometry)
+    source: shipway_linestring_gen_z13
     tolerance: ZRES12
 
   shipway_linestring_gen_z13:
-    source: shipway_linestring
-    sql_filter: ST_IsValid(geometry)
+    source: shipway_linestring_gen_z14
     tolerance: ZRES13
   shipway_linestring_gen_z14:
-    source: shipway_linestring
-    sql_filter: ST_IsValid(geometry)
+    source: shipway_linestring_gen_z15
     tolerance: ZRES14
   shipway_linestring_gen_z15:
-    source: shipway_linestring
-    sql_filter: ST_IsValid(geometry)
+    source: shipway_linestring_gen_z16
     tolerance: ZRES15
   shipway_linestring_gen_z16:
-    source: shipway_linestring
-    sql_filter: ST_IsValid(geometry)
+    source: shipway_linestring_gen_z17
     tolerance: ZRES16
   shipway_linestring_gen_z17:
     source: shipway_linestring
@@ -146,24 +137,32 @@ generalized_tables:
 # etldoc: osm_highway_linestring -> osm_highway_linestring_gen_z11
   highway_linestring_gen_z11:
     source: highway_linestring_gen_z12
-    sql_filter: (highway IN ('motorway', 'trunk', 'primary', 'secondary', 'tertiary', 'motorway_link', 'trunk_link', 'primary_link', 'secondary_link', 'tertiary_link', 'busway', 'bus_guideway') OR highway = 'construction' AND construction IN ('motorway', 'trunk', 'primary', 'secondary', 'tertiary', 'motorway_link', 'trunk_link', 'primary_link', 'secondary_link', 'tertiary_link', 'busway', 'bus_guideway')) AND NOT is_area AND ST_IsValid(geometry)
-    tolerance: ZRES13
+    tolerance: ZRES11
 
   highway_linestring_gen_z12:
     source: highway_linestring_gen_z13
-    sql_filter: (highway IN ('motorway', 'trunk', 'primary', 'secondary', 'tertiary', 'motorway_link', 'trunk_link', 'primary_link', 'secondary_link', 'tertiary_link', 'busway', 'bus_guideway') OR highway = 'construction' AND construction IN ('motorway', 'trunk', 'primary', 'secondary', 'tertiary', 'motorway_link', 'trunk_link', 'primary_link', 'secondary_link', 'tertiary_link', 'busway', 'bus_guideway')) AND NOT is_area AND ST_IsValid(geometry)
-    tolerance: ZRES14
+    tolerance: ZRES12
   highway_linestring_gen_z13:
     source: highway_linestring_gen_z14
-    sql_filter: (highway IN ('motorway', 'trunk', 'primary', 'secondary', 'tertiary', 'motorway_link', 'trunk_link', 'primary_link', 'secondary_link', 'tertiary_link', 'busway', 'bus_guideway') OR highway = 'construction' AND construction IN ('motorway', 'trunk', 'primary', 'secondary', 'tertiary', 'motorway_link', 'trunk_link', 'primary_link', 'secondary_link', 'tertiary_link', 'busway', 'bus_guideway')) AND NOT is_area AND ST_IsValid(geometry)
-    tolerance: ZRES15
+    # only show major roads for zoom levels <= 13
+    sql_filter: (highway IN ('motorway', 'trunk', 'primary', 'secondary', 'tertiary', 'motorway_link', 'trunk_link', 'primary_link', 'secondary_link', 'tertiary_link', 'busway', 'bus_guideway') OR highway = 'construction' AND construction IN ('motorway', 'trunk', 'primary', 'secondary', 'tertiary', 'motorway_link', 'trunk_link', 'primary_link', 'secondary_link', 'tertiary_link', 'busway', 'bus_guideway'))
+    tolerance: ZRES13
   highway_linestring_gen_z14:
     source: highway_linestring_gen_z15
-    sql_filter: (highway IN ('motorway', 'trunk', 'primary', 'secondary', 'tertiary', 'motorway_link', 'trunk_link', 'primary_link', 'secondary_link', 'tertiary_link', 'busway', 'bus_guideway') OR highway = 'construction' AND construction IN ('motorway', 'trunk', 'primary', 'secondary', 'tertiary', 'motorway_link', 'trunk_link', 'primary_link', 'secondary_link', 'tertiary_link', 'busway', 'bus_guideway')) AND NOT is_area AND ST_IsValid(geometry)
-    tolerance: ZRES16
+    tolerance: ZRES14
   highway_linestring_gen_z15:
+    source: highway_linestring_gen_z16
+    # prevent "paths" to appear in zoom levels < 15
+    sql_filter: (highway NOT IN ('pedestrian', 'path', 'footway', 'cycleway', 'steps', 'bridleway', 'corridor'))
+    tolerance: ZRES15
+  highway_linestring_gen_z16:
+    source: highway_linestring_gen_z17
+    # prevent "city paths" to appear in zoom levels < 16
+    sql_filter: (highway NOT IN ('pedestrian', 'cycleway', 'steps', 'corridor'))
+    tolerance: ZRES16
+  highway_linestring_gen_z17:
     source: highway_linestring
-    sql_filter: (highway IN ('motorway', 'trunk', 'primary', 'secondary', 'tertiary', 'motorway_link', 'trunk_link', 'primary_link', 'secondary_link', 'tertiary_link', 'busway', 'bus_guideway') OR highway = 'construction' AND construction IN ('motorway', 'trunk', 'primary', 'secondary', 'tertiary', 'motorway_link', 'trunk_link', 'primary_link', 'secondary_link', 'tertiary_link', 'busway', 'bus_guideway')) AND NOT is_area AND ST_IsValid(geometry)
+    sql_filter: NOT is_area AND ST_IsValid(geometry)
     tolerance: ZRES17
 
 name_field: &name
