Add more attributes for hiking trails + more meadows and animal_keeping landuse zones

--- a/layers/landuse/landuse.yaml
+++ b/layers/landuse/landuse.yaml
@@ -45,6 +45,9 @@ layer:
       - neighbourhood
       - dam
       - quarry
+      - winter_sports
+      - animal_keeping 
+      - meadow 
   datasource:
     geometry_field: geometry
     query: (SELECT geometry, class FROM layer_landuse(!bbox!, z(!scale_denominator!))) AS t
