--- a/layers/transportation/transportation.yaml
+++ b/layers/transportation/transportation.yaml
@@ -198,6 +198,24 @@ layer:
     mtb_scale:
       description: |
           Original value of the [`mtb:scale`](http://wiki.openstreetmap.org/wiki/Key:mtb:scale) tag (highways only).
+    sac_scale:
+      description: |
+          Original value of the [`sac_scale`](https://wiki.openstreetmap.org/wiki/Key:sac_scale) tag (highways only).
+    trail_visibility:
+      description: |
+          Original value of the [`trail_visibility`](https://wiki.openstreetmap.org/wiki/Key:trail_visibility).
+    climbing:
+      description: |
+          Original value of the [`climbing`](https://wiki.openstreetmap.org/wiki/Climbing).
+    climbing_grade_uiaa:
+      description: |
+          Original value of the [`climbing:grade:uiaa`](https://wiki.openstreetmap.org/wiki/Climbing#Grading).
+    route:
+      description: |
+          Original value of the [`route`](https://wiki.openstreetmap.org/wiki/Key:route).
+    route_rank:
+      description: |
+          The rank of the route.
     surface:
       description: |
           Values of [`surface`](https://wiki.openstreetmap.org/wiki/Key:surface) tag devided into 2 groups `paved` (paved, asphalt, cobblestone, concrete, concrete:lanes, concrete:plates, metal, paving_stones, sett, unhewn_cobblestone, wood) and `unpaved` (unpaved, compacted, dirt, earth, fine_gravel, grass, grass_paver, gravel, gravel_turf, ground, ice, mud, pebblestone, salt, sand, snow, woodchips).
@@ -207,7 +225,7 @@ layer:
   datasource:
     geometry_field: geometry
     srid: 900913
-    query: (SELECT geometry, class, subclass, network, oneway, ramp, brunnel, service, access, toll, expressway, layer, level, indoor, bicycle, foot, horse, mtb_scale, surface FROM layer_transportation(!bbox!, z(!scale_denominator!))) AS t
+    query: (SELECT geometry, class, subclass, network, oneway, ramp, brunnel, service, access, toll, expressway, layer, level, indoor, bicycle, foot, horse, mtb_scale, sac_scale, trail_visibility, climbing, climbing_grade_uiaa, route, route_rank, surface FROM layer_transportation(!bbox!, z(!scale_denominator!))) AS t
 schema:
   - ./network_type.sql
   - ./class.sql
